--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,6 +3,10 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+
+/* font-family: 'Bungee', cursive;
+font-family: 'Source Sans Pro', sans-serif; */
+
 html {
   box-sizing: border-box;
 }
@@ -18,8 +22,16 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container {
+  width: 90%;
+ }
