--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -20,3 +20,13 @@ main output {
   padding-top: 0.5em;
   margin-top: 0.5em;
 }
+
+#tweet-text {
+  height: 1.35em;
+  border-width: 0;
+  margin: 0;
+  resize: none;
+  background: transparent;
+  display: flex;
+  width: 100%;
+}
