--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,4 +7,5 @@ header {
   align-items: center;
   background-color: #b0e600;
   background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
+  margin-top: 120px;
 }
