--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,10 +1,12 @@
 nav {
   height: 120px;
-  width: 100vw;
+  width: 100%;
   background-color: #4056A1;
   color: white;
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
 }
 
 nav span {
@@ -24,4 +26,15 @@ nav h4 {
   font-size: 1em;
   padding: 0;
   font-family: "Source sans-serif", sans-serif;
+}
+
+nav div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+nav div h4 {
+    margin-bottom: 0px;
+    padding-bottom: 0.3em;
 }
