--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -11,6 +11,7 @@ main label {
 
 main output {
   font-weight: 600;
+  font-family: 'Bungee', sans-serif;
 }
 
 .container section form div{
@@ -21,7 +22,7 @@ main output {
   margin-top: 0.5em;
 }
 
-#tweet-text {
+.tweet-text {
   height: 1.35em;
   border-width: 0;
   margin: 0;
@@ -29,4 +30,60 @@ main output {
   background: transparent;
   display: flex;
   width: 100%;
+  font-weight: 600;
+}
+
+.tweet-text:focus {
+  outline: none;
+}
+
+article {
+  border: 4px solid black;
+  margin: 0 10%;
+  margin-top: 2.5%;
+  display: flex;
+  flex-direction: column;
+  opacity: 50%;
+}
+
+article .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+
+article .header span {
+  display: flex;
+  align-items: center;
+}
+
+article .header img {
+  width: 60px;
+  padding-right: 1em;
+}
+
+article .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 1em;
+  margin-left: 2%;
+  margin-right: 2%;
+  padding-bottom: 1em;
+}
+
+article:hover {
+  box-shadow: 10px 10px;
+  opacity: 100%;
+}
+
+article p {
+  border-bottom: 4px solid black;
+  margin-left: 2%;
+  margin-right: 2%;
+  padding-bottom: 1.5em;
+  font-weight: 600;
+  word-wrap: break-word;
 }
