--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,11 +1,44 @@
 header {
-  height: 400px;
+  height: 500px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #b0e600;
+  background-color:#9370DB;
   background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
   margin-top: 120px;
+}
+
+header h2 {
+  color: white;
+}
+
+header img {
+  border-radius: 50px;
+}
+
+@media screen and (min-width: 950px) {
+  header {
+    margin-left: 3em;
+    margin-right: 3em;
+    margin-top: 150px;
+    border-radius: 150px;
+  }
+}
+
+@media screen and (max-width: 949px) {
+  header {
+    margin-top: 0;
+    padding-top: 100px;
+  }
+  nav {
+    background-color: transparent;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  header {
+    height: 600px;
+  }
 }
