--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,7 @@
 nav {
   height: 120px;
   width: 100%;
-  background-color: #4056A1;
+  background-color: maroon;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -52,5 +52,17 @@ nav div {
 nav div h4 {
     margin-bottom: 0px;
     padding-bottom: 0.3em;
+}
+
+@media screen and (max-width: 490px) {
+  nav {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  nav h4 {
+    margin-top: 0;
+    padding-top: 0;
+  }
 }
 
