--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color:#9370DB;
+  background-color:orange;
   background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
   margin-top: 120px;
 }
@@ -34,10 +34,11 @@ header img {
   }
   nav {
     background-color: transparent;
+    background-image: none;
   }
 }
 
-@media screen and (max-width: 490px) {
+@media screen and (max-width: 500px) {
   header {
     height: 600px;
   }
